remove all artists + enum